--- a/sass/main.css
+++ b/sass/main.css
@@ -1937,7 +1937,7 @@ body {
   left: calc((100vw - 1728px - 16px) / 2);
   width: 100%;
   max-width: 1728px;
-  z-index: 10000000000000000000000000000;
+  z-index: 9999999;
 }
 .header-2-0 .bottom-header.fixed::before {
   content: "";
